Funcionalidad para generar codigos de barra agregada a "localizaciones.js", "localizar.js" y "traslado.js"

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,17 +3,12 @@
     // Mantenga el puntero para ver las descripciones de los existentes atributos.
     // Para más información, visite: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-		
-        
-        
-        
-        
+    "configurations": [   
         {
             "type": "chrome",
             "request": "launch",
             "name": "Iniciar Chrome para localhost",
-            "url": "http://localhost:81",
+            "url": "http://localhost:81/agro",
             "webRoot": "${workspaceFolder}"
         }
     ]
