Funcionalidad para generar codigos de barras separada en un único Javascript para uso general

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,12 @@
             "name": "Iniciar Chrome para localhost",
             "url": "http://localhost:81/agro",
             "webRoot": "${workspaceFolder}"
+        },
+        {
+            "name": "Listen for Xdebug",
+            "type": "php",
+            "request": "launch",
+            "port": 9003
         }
     ]
 }
